0.43	- 2014-03-31, H.Merijn Brand
    * Updated copyright to 2014
    * Unquote schema's in test for cygwin

0.42	- 2013-08-14, H.Merijn Brand
    * Optionally skip tests using File::Spec->tempdir () RT#87684
    * And document the use of $TMPDIR in README
    * Make the SYNOPSIS more reflect real-world usage
    * Detect DBI::Test and use it if available

0.41	- 2013-07-29, H.Merijn Brand
    * Use File::Spec->tmpdir () for universal existing folder
      Note that huge $TMP folders may cause the test to run slow
    * Use File::Spec::rel2abs () instead of abs_path and hoops
    * Guard against parallel testing, which is unsupported
    * Guard against streaming tests (they PASS on the DBI-devel)

0.40	- 2013-07-23, H.Merijn Brand
    * Fix version references in doc
    * Fix tests for Windows

0.39	- 2013-06-28, H.Merijn Brand
    * Use f_file in docs. file is deprecated
    * DBD::CSV's repository moved to github
    * Add test for row-completeness
    * Fix UTF-8 tests to better follow Text::CSV_XS auto-encoding
    * Require more recent versions of low level modules that fixe
      issues reported for DBD::CSV
    * Development will also do mosts tests with DBI_SQL_NANO=1
    * Added support for f_dir_search from DBD::File (in fact DBI was
      changed to feature this for DBD::CSV :)
    * Fix test relying on spell-error in DBI's error message
    * Document csv_class (still undertested)

0.38	- 2013-01-09, H.Merijn Brand
    * the tar paxheaders hit again (http://www.perlmonks.org/?node_id=1004571)

0.37	- 2013-01-09, H.Merijn Brand
    * Fixed RT#80078, resulting in getline calls on undef (Benjamin Booth)
    * Require latest DBI and SQL::Statement
    * Updated copyright to 2013
    * Fixes for DBI-1.623 (Jens Rehsack)

0.36	- 2012-08-22, H.Merijn Brand
    * Add line/record number and position in error messages

0.35	- 2012-05-24, H.Merijn Brand
    * Improved documentation (including mje's contribution)
    * Tested under 5.16.0 (installed)
