@@ -9,6 +9,26 @@ use strict;
 use ExtUtils::MakeMaker;
 use File::Spec;
 
+eval { require DBI;      };
+if ($@) {
+    print <<"MSG";
+
+DBD::CSV requires DBI and it cannot be loaded:
+$@
+
+MSG
+    exit 1;
+    }
+if ($DBI::VERSION < 1.628) {
+    print <<"MSG";
+
+Trying to use DBD::CSV with DBI-$DBI::VERSION is heading for failure.
+DBD::CSV is relying on DBD::File, bundled in the DBI release and does
+require features not present in this version of DBI.
+
+MSG
+    exit 0;
+    }
 eval { require DBD::CSV; };
 if (!$@ && $DBD::CSV::VERSION < 0.1010) {
     print <<'MSG';
@@ -23,7 +43,7 @@ README for details.
 
 MSG
     sleep 5;
-    };
+    }
 
 use vars qw( $DBI_INC_DIR );
 
@@ -106,7 +126,7 @@ sub postamble
 	'	cover -test',
 	'',
 	'spellcheck:',
-	'	pod-spell-check --aspell',
+	'	pod-spell-check --aspell --ispell',
 	'',
 	'checkmeta:	spellcheck',
 	'	perl sandbox/genMETA.pl -c',
